--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 <body>
     <div class="first">
-        <h1>text</h1>
+        <div class="top">
+            <h2 class="left">Header Logo</h2>
+            
+            <ol class="right">
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ol>
+        </div>
+
+        <div class="bottom">
+            <h1>text</h1>
+        </div>
     </div>
 
     <div class="second">
