--- a/index.html
+++ b/index.html
@@ -20,7 +20,17 @@
         </div>
 
         <div class="bottom">
-            <h1>text</h1>
+            <div class="left">
+                <h1 class="hero">This website is awesome</h1>
+                <h2 class="subhero">This website has some smaller subtext that
+                    goes here under the main title. It's a smaller
+                    font and the color is lower contrast
+                </h2>
+            </div>
+
+            <div class="right">
+                <h2>this is a placeholder for an image</h2>
+            </div>
         </div>
     </div>
 
