--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
         <div class="bottom">
             <div class="left">
-                <h1 class="hero">This website is awesome</h1>
+                <h1 class="hero">This website isn't awesome</h1>
                 <h2 class="subhero">This website has some smaller subtext that
                     goes here under the main title. It's a smaller
                     font and the color is lower contrast
                 </h2>
+                <button type="button" id="first-button">Sign up</button>
             </div>
 
             <div class="right">
@@ -47,7 +48,7 @@
     </div>
 
     <div class="fifth">
-        <h2>text</h2>
+        <h2>Copyright © The Odin Project 2021</h2>
     </div>
 </body>
 </html>
