--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div class="bottom">
             <div class="left">
                 <h1 class="hero">This website isn't awesome</h1>
-                <h2 class="subhero">This website has some smaller subtext that
+                <p class="subhero">This website has some smaller subtext that
                     goes here under the main title. It's a smaller
                     font and the color is lower contrast
-                </h2>
+                </p>
                 <button type="button" id="first-button">Sign up</button>
             </div>
 
@@ -36,15 +36,65 @@
     </div>
 
     <div class="second">
-        <h2>text</h2>
+        <div class="top">
+            <h2>Some random information</h2>
+        </div>
+
+        <div class="bottom">
+            <div class="pair">
+                <div class="info-box"></div>
+                <p class="info-text">this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="pair">
+                <div class="info-box"></div>
+                <p class="info-text">this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="pair">
+                <div class="info-box"></div>
+                <p class="info-text">this is some subtext under an illustration or image</p>
+            </div>
+
+            <div class="pair">
+                <div class="info-box"></div>
+                <p class="info-text">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
     </div>
 
     <div class="third">
-        <h2>text</h3>
+        <div class="quote">
+            <div class="top">
+                <p>This is an inspiring quote, or a testimonial
+                    from a customer. Maybe it's just filling up
+                    space, or maybe people will actually read it.
+                    Who knows? All I know is that it looks nice.
+                </p>
+            </div>
+            <div class="bottom">
+                <h2>-Thor, God of Thunder</h2>
+            </div>
+        </div>
     </div>
 
     <div class="forth">
-        <h2>text</h2>
+        <div class="container">
+            <div class="left">
+                <div class="top">
+                    <h2>Call to action! It's time!</h2>
+                </div>
+
+                <div class="bottom">
+                    <p>Sign up for our product by clicking that button 
+                    right over there!</p>
+                </div>
+            </div>
+
+            <div class="right">
+                <button type="button" id="second-button">Sign up</button>
+            </div>
+        </div>
     </div>
 
     <div class="fifth">
