--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
         <div class="bottom">
             <div class="left">
                 <h1 class="hero">This website isn't awesome</h1>
-                <p class="subhero">This website has some smaller subtext that
-                    goes here under the main title. It's a smaller
-                    font and the color is lower contrast
+                <p class="subhero">But remember: life is about the journey,
+                    not the ride, and what a wonderful journey it can be!
                 </p>
                 <button type="button" id="first-button">Sign up</button>
             </div>
@@ -37,28 +36,28 @@
 
     <div class="second">
         <div class="top">
-            <h2>Some random information</h2>
+            <h2>Some random non-information</h2>
         </div>
 
         <div class="bottom">
             <div class="pair">
                 <div class="info-box"></div>
-                <p class="info-text">this is some subtext under an illustration or image</p>
+                <p class="info-text">this isn't some subtext under an illustration or image</p>
             </div>
 
             <div class="pair">
                 <div class="info-box"></div>
-                <p class="info-text">this is some subtext under an illustration or image</p>
+                <p class="info-text">this isn't some subtext under an illustration or image</p>
             </div>
 
             <div class="pair">
                 <div class="info-box"></div>
-                <p class="info-text">this is some subtext under an illustration or image</p>
+                <p class="info-text">this isn't some subtext under an illustration or image</p>
             </div>
 
             <div class="pair">
                 <div class="info-box"></div>
-                <p class="info-text">this is some subtext under an illustration or image</p>
+                <p class="info-text">this isn't some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
@@ -66,14 +65,13 @@
     <div class="third">
         <div class="quote">
             <div class="top">
-                <p>This is an inspiring quote, or a testimonial
-                    from a customer. Maybe it's just filling up
-                    space, or maybe people will actually read it.
-                    Who knows? All I know is that it looks nice.
+                <p>“If you are distressed by anything external, the pain is not due to the thing 
+                    itself, but to your estimate of it; and this you have the power to revoke at 
+                    any moment.” 
                 </p>
             </div>
             <div class="bottom">
-                <h2>-Thor, God of Thunder</h2>
+                <h2>-Marcus Aurelius</h2>
             </div>
         </div>
     </div>
@@ -82,11 +80,11 @@
         <div class="container">
             <div class="left">
                 <div class="top">
-                    <h2>Call to action! It's time!</h2>
+                    <h2>No call to action! It's never time!</h2>
                 </div>
 
                 <div class="bottom">
-                    <p>Sign up for our product by clicking that button 
+                    <p>Don't sign up for our product by clicking that button 
                     right over there!</p>
                 </div>
             </div>
@@ -98,7 +96,7 @@
     </div>
 
     <div class="fifth">
-        <h2>Copyright © The Odin Project 2021</h2>
+        <h2>Copyright © London Storm 2022</h2>
     </div>
 </body>
 </html>
